# kiro-total-recall

./: .gitignore  POWER.md  README.md  config.default.toml  mcp.json  pyproject.toml
src/kiro_total_recall/: __init__.py  cli_loader.py  config.py  ide_loader.py  indexer.py  loader.py  models.py  query.py  server.py
