[project]
name = "kiro-total-recall"
version = "0.1.0"
description = "Semantic search across Kiro CLI and IDE conversation history"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Danilo Poccia" }]
keywords = ["kiro", "mcp", "semantic-search", "conversation-history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.26.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "filelock>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/danilop/kiro-total-recall"
Repository = "https://github.com/danilop/kiro-total-recall"

[project.scripts]
kiro-total-recall = "kiro_total_recall.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiro_total_recall"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
